--- a/01-nextjs-first-app/package.json
+++ b/01-nextjs-first-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "13.4.18",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.17",
     "next": "13.4.17",
