--- a/devtalles_/01-first-steps/.eslintrc.json
+++ b/devtalles_/01-first-steps/.eslintrc.json
@@ -1,3 +1,4 @@
 {
-  "extends": "next/core-web-vitals"
+  // "extends": "next/core-web-vitals", // lo que ponía antes
+  "extends": "./node_modules/@next/env/dist/index.js"
 }
