--- a/devtalles_/03-admin-todo/package.json
+++ b/devtalles_/03-admin-todo/package.json
@@ -12,7 +12,8 @@
     "@prisma/client": "^5.3.1",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "yup": "^1.3.1"
   },
   "devDependencies": {
     "@types/node": "latest",
