--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-/postgres/
-.env
+/03-admin-todo/postgres
+/03-admin-todo/.env
 
 
 # dependencies
