--- a/devtalles_/03-admin-todo/package.json
+++ b/devtalles_/03-admin-todo/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.3.1",
+    "@prisma/client": "5.3.1",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "react-icons": "^4.11.0",
-    "yup": "^1.3.1"
+    "react-icons": "4.11.0",
+    "yup": "1.3.1"
   },
   "devDependencies": {
     "@types/node": "latest",
@@ -24,7 +24,7 @@
     "eslint": "latest",
     "eslint-config-next": "latest",
     "postcss": "latest",
-    "prisma": "^5.3.1",
+    "prisma": "5.3.1",
     "tailwindcss": "latest",
     "typescript": "latest"
   }
