--- a/devtalles_/03-admin-todo/package.json
+++ b/devtalles_/03-admin-todo/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.3.1",
+    "cookies-next": "^4.0.0",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
