added authentication with github

--- a/devtalles_/03-admin-todo/.env.template
+++ b/devtalles_/03-admin-todo/.env.template
@@ -5,3 +5,9 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres"
+
+# ESTE AUTH LO CONSIGUES A TRAVÉS DE https://generate-secret.vercel.app/32
+NEXTAUTH_SECRET="This is an example" 
+
+GITHUB_ID=
+GITHUB_SECRET=
