--- a/devtalles_/03-admin-todo/package.json
+++ b/devtalles_/03-admin-todo/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "5.3.1",
     "cookies-next": "^4.0.0",
     "next": "latest",
+    "next-auth": "^4.23.1",
     "react": "latest",
     "react-dom": "latest",
     "react-icons": "4.11.0",
