--- a/devtalles_/03-admin-todo/.env.template
+++ b/devtalles_/03-admin-todo/.env.template
@@ -9,5 +9,10 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres"
 # ESTE AUTH LO CONSIGUES A TRAVÉS DE https://generate-secret.vercel.app/32
 NEXTAUTH_SECRET="This is an example" 
 
+# http://localhost:3000/api/auth/callback/google
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+# http://localhost:3000/api/auth/callback/github
 GITHUB_ID=
 GITHUB_SECRET=
