--- a/devtalles_/03-admin-todo/package.json
+++ b/devtalles_/03-admin-todo/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "1.0.2",
     "@prisma/client": "5.3.1",
-    "cookies-next": "^4.0.0",
-    "next": "latest",
-    "next-auth": "^4.23.1",
+    "cookies-next": "4.0.0",
+    "next": "13.5.4",
+    "next-auth": "4.23.1",
     "react": "latest",
     "react-dom": "latest",
     "react-icons": "4.11.0",
