--- a/devtalles_/03-admin-todo/package.json
+++ b/devtalles_/03-admin-todo/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "1.0.2",
     "@prisma/client": "5.3.1",
+    "bcryptjs": "2.4.3",
     "cookies-next": "4.0.0",
     "next": "13.5.4",
     "next-auth": "4.23.1",
@@ -20,6 +21,7 @@
     "yup": "1.3.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.4",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
