changed token name in .env.template

--- a/midudev_/04-image-to-code/.env.template
+++ b/midudev_/04-image-to-code/.env.template
@@ -1,1 +1,3 @@
-OPENAI_API_KEY="tu_api_key"
+# OPENAI_API_KEY="tu_api_key" NO PUEDES PONER ESTA PORQUE EL SISTEMA DE VERCEL COGE POR DEFECTO LA DEL SISTEMA OPERATIVO Y POR TANTO NO FUNCIONA PORQUE HAY DOS VARIEBLES CON EL MISMO NOMBRES
+
+OPENAI_API_TOKEN="tu_api_key"
