--- a/devtalles_/04-ecom-tesla/package.json
+++ b/devtalles_/04-ecom-tesla/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "clsx": "^2.0.0",
+    "clsx": "2.0.0",
     "next": "14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.12.0",
-    "swiper": "^11.0.5",
-    "zustand": "^4.4.7"
+    "swiper": "11.0.5",
+    "zustand": "4.4.7"
   },
   "devDependencies": {
     "@types/node": "20.10.0",
