--- a/devtalles_/04-ecom-tesla/package.json
+++ b/devtalles_/04-ecom-tesla/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.7.0",
     "clsx": "2.0.0",
     "next": "14.0.3",
     "react": "18.2.0",
