--- a/devtalles_/04-ecom-tesla/package.json
+++ b/devtalles_/04-ecom-tesla/package.json
@@ -6,10 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "ts-node src/seed/seedDb.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.7.0",
+    "@prisma/client": "5.7.0",
     "clsx": "2.0.0",
     "next": "14.0.3",
     "react": "18.2.0",
@@ -26,8 +27,9 @@
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
     "postcss": "8.4.31",
-    "prisma": "^5.7.0",
+    "prisma": "5.7.0",
     "tailwindcss": "3.3.5",
+    "ts-node": "10.9.1",
     "typescript": "5.3.2"
   }
 }
